--- a/pokedex3/Base.lproj/Main.storyboard
+++ b/pokedex3/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,121 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iaa-Rq-PjZ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PokeDex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="DpT-m3-kO5">
+                                        <rect key="frame" x="97.5" y="0.0" width="181" height="66.5"/>
+                                        <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="43"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="DpT-m3-kO5" firstAttribute="centerY" secondItem="iaa-Rq-PjZ" secondAttribute="centerY" id="348-kp-hhH"/>
+                                    <constraint firstAttribute="bottom" secondItem="DpT-m3-kO5" secondAttribute="bottom" id="AwB-k0-Yej"/>
+                                    <constraint firstItem="DpT-m3-kO5" firstAttribute="top" secondItem="iaa-Rq-PjZ" secondAttribute="top" id="Rls-Fk-sDV"/>
+                                    <constraint firstItem="DpT-m3-kO5" firstAttribute="centerX" secondItem="iaa-Rq-PjZ" secondAttribute="centerX" id="eE3-4V-HgL"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="hfQ-EI-ETG">
+                                <rect key="frame" x="0.0" y="67" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="rLi-zG-1dD"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="HIJ-XF-s24">
+                                <rect key="frame" x="0.0" y="110.5" width="375" height="556.5"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Ls-hR-UP0">
+                                <rect key="frame" x="20" y="126.5" width="335" height="520.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mcW-FG-7tU">
+                                    <size key="itemSize" width="104" height="104"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="2yJ-kB-fl9" customClass="PokeCell" customModule="pokedex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="104" height="104"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="104" height="104"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="2gq-tR-aWx">
+                                                    <rect key="frame" x="0.0" y="0.0" width="104" height="84"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.4332582438650307" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="104" id="0Yx-eD-91T"/>
+                                                        <constraint firstAttribute="height" constant="84" id="zMV-EU-TMv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmendar" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="32W-II-Jyj">
+                                                    <rect key="frame" x="0.0" y="83" width="104" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="104" id="pAE-Av-irr"/>
+                                                        <constraint firstAttribute="height" constant="21" id="ta6-X3-cUM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="32W-II-Jyj" firstAttribute="top" secondItem="2gq-tR-aWx" secondAttribute="bottom" constant="-1" id="ELK-ue-8at"/>
+                                            <constraint firstAttribute="bottom" secondItem="32W-II-Jyj" secondAttribute="bottom" id="EXn-Cx-Or9"/>
+                                            <constraint firstItem="2gq-tR-aWx" firstAttribute="leading" secondItem="2yJ-kB-fl9" secondAttribute="leading" id="HIG-Aa-Shb"/>
+                                            <constraint firstItem="32W-II-Jyj" firstAttribute="leading" secondItem="2yJ-kB-fl9" secondAttribute="leading" id="LyU-0T-Pxf"/>
+                                            <constraint firstItem="2gq-tR-aWx" firstAttribute="top" secondItem="2yJ-kB-fl9" secondAttribute="top" id="Z61-Ni-pCI"/>
+                                            <constraint firstAttribute="trailing" secondItem="2gq-tR-aWx" secondAttribute="trailing" id="tZc-x1-Gek"/>
+                                            <constraint firstAttribute="trailing" secondItem="32W-II-Jyj" secondAttribute="trailing" id="u3N-A4-94g"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="32W-II-Jyj" id="6cV-IE-0z4"/>
+                                            <outlet property="thumbImage" destination="2gq-tR-aWx" id="xBH-A7-Rt3"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="iaa-Rq-PjZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2Xh-Wc-Kmw"/>
+                            <constraint firstItem="iaa-Rq-PjZ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="4xI-7t-Ae5"/>
+                            <constraint firstItem="HIJ-XF-s24" firstAttribute="top" secondItem="hfQ-EI-ETG" secondAttribute="bottom" id="8EG-Xu-hVQ"/>
+                            <constraint firstAttribute="trailing" secondItem="iaa-Rq-PjZ" secondAttribute="trailing" id="AMe-87-wZ7"/>
+                            <constraint firstAttribute="trailing" secondItem="HIJ-XF-s24" secondAttribute="trailing" id="BnB-Lj-Lal"/>
+                            <constraint firstItem="hfQ-EI-ETG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GQZ-40-oyZ"/>
+                            <constraint firstItem="iaa-Rq-PjZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="N1v-lt-UAZ"/>
+                            <constraint firstItem="hfQ-EI-ETG" firstAttribute="top" secondItem="iaa-Rq-PjZ" secondAttribute="bottom" id="PfQ-EX-w58"/>
+                            <constraint firstAttribute="trailing" secondItem="hfQ-EI-ETG" secondAttribute="trailing" id="VPm-ze-iFw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HIJ-XF-s24" secondAttribute="bottom" id="XLa-GV-uws"/>
+                            <constraint firstItem="4Ls-hR-UP0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="acv-dq-bJ5"/>
+                            <constraint firstItem="4Ls-hR-UP0" firstAttribute="top" secondItem="hfQ-EI-ETG" secondAttribute="bottom" constant="16" id="gN0-z3-wYV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4Ls-hR-UP0" secondAttribute="bottom" constant="20" id="hgQ-pO-35D"/>
+                            <constraint firstItem="HIJ-XF-s24" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xYn-tQ-FGa"/>
+                            <constraint firstAttribute="trailing" secondItem="4Ls-hR-UP0" secondAttribute="trailing" constant="20" id="xgY-X4-uQm"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="4Ls-hR-UP0" id="eCd-ur-7pJ"/>
+                        <outlet property="searchBar" destination="hfQ-EI-ETG" id="WaB-cM-lyt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="26.399999999999999" y="99.400299850074973"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
